--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
   },
   "dependencies": {
     "crypto": "^1.0.1",
+    "dotenv": "^17.2.3",
     "jsbarcode": "^3.12.1",
     "jspdf": "^2.5.1",
     "next": "^14.2.0",
     "oauth-1.0a": "^2.2.6",
+    "pg": "^8.16.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/pg": "^8.15.6",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
