--- a/package.json
+++ b/package.json
@@ -9,15 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/leaflet": "^1.9.21",
     "crypto": "^1.0.1",
     "dotenv": "^17.2.3",
     "jsbarcode": "^3.12.1",
     "jspdf": "^2.5.1",
+    "leaflet": "^1.9.4",
     "next": "^14.2.0",
     "oauth-1.0a": "^2.2.6",
     "pg": "^8.16.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-leaflet": "^4.2.1"
   },
   "devDependencies": {
     "@types/node": "^20",
